website/versioned_docs/version-2.0.0-alpha.11/web.baseapiclient.md
---
id: version-2.0.0-alpha.11-web.baseapiclient
title: BaseAPIClient class
hide_title: true
original_id: web.baseapiclient
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## BaseAPIClient class


<b>Signature:</b>

```typescript
export declare abstract class BaseAPIClient 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(options)](./web.baseapiclient._constructor_.md) |  | Constructs a new instance of the <code>BaseAPIClient</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [apiKey](./web.baseapiclient.apikey.md) |  | <code>string</code> |  |
|  [endpoint](./web.baseapiclient.endpoint.md) |  | <code>string</code> |  |
|  [fetchFunction](./web.baseapiclient.fetchfunction.md) |  | <code>typeof fetch</code> |  |
|  [getExtraSessionInfo](./web.baseapiclient.getextrasessioninfo.md) |  | <code>() =&gt; Promise&lt;JSONObject &#124; null&gt;</code> |  |
|  [refreshTokenFunction](./web.baseapiclient.refreshtokenfunction.md) |  | <code>() =&gt; Promise&lt;boolean&gt;</code> |  |
|  [requestClass](./web.baseapiclient.requestclass.md) |  | <code>typeof Request</code> |  |
|  [userAgent](./web.baseapiclient.useragent.md) |  | <code>string</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [changePassword(newPassword, oldPassword)](./web.baseapiclient.changepassword.md) |  |  |
|  [del(path, options)](./web.baseapiclient.del.md) |  |  |
|  [deleteOAuthProvider(providerID)](./web.baseapiclient.deleteoauthprovider.md) |  |  |
|  [fetch(input, init, options)](./web.baseapiclient.fetch.md) |  |  |
|  [get(path, options)](./web.baseapiclient.get.md) |  |  |
|  [getSession(id)](./web.baseapiclient.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./web.baseapiclient.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listSessions()](./web.baseapiclient.listsessions.md) |  |  |
|  [login(loginID, password, options)](./web.baseapiclient.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./web.baseapiclient.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./web.baseapiclient.loginwithcustomtoken.md) |  |  |
|  [logout()](./web.baseapiclient.logout.md) |  |  |
|  [me()](./web.baseapiclient.me.md) |  |  |
|  [oauthAuthorizationURL(providerID, options)](./web.baseapiclient.oauthauthorizationurl.md) |  |  |
|  [post(path, options)](./web.baseapiclient.post.md) |  |  |
|  [postAndReturnAuthResponse(path, options)](./web.baseapiclient.postandreturnauthresponse.md) |  |  |
|  [prepareHeaders()](./web.baseapiclient.prepareheaders.md) |  |  |
|  [refresh(refreshToken)](./web.baseapiclient.refresh.md) |  |  |
|  [request(method, path, options)](./web.baseapiclient.request.md) |  |  |
|  [requestEmailVerification(email)](./web.baseapiclient.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./web.baseapiclient.requestforgotpasswordemail.md) |  |  |
|  [resetPassword(form)](./web.baseapiclient.resetpassword.md) |  |  |
|  [revokeOtherSessions()](./web.baseapiclient.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./web.baseapiclient.revokesession.md) |  |  |
|  [signup(loginIDs, password, options)](./web.baseapiclient.signup.md) |  |  |
|  [updateMetadata(metadata)](./web.baseapiclient.updatemetadata.md) |  |  |
|  [updateSession(id, patch)](./web.baseapiclient.updatesession.md) |  |  |
|  [verifyWithCode(code)](./web.baseapiclient.verifywithcode.md) |  |  |

